# linux-boot-extractor

./: .gitignore  Cargo.toml  README.md  build.sh
scripts/: make-test-image.sh  verify-boot.sh
src/: blockdev.rs  error.rs  kernel.rs  lib.rs  main.rs  shell.rs  vdafix.rs
src/boot/: bls.rs  extlinux.rs  grub.rs  grubenv.rs  mod.rs  vercmp.rs
src/disk/: mod.rs  qcow2.rs
src/fsys/: ext4.rs  mod.rs  vfat.rs
src/part/: gpt.rs  mbr.rs  mod.rs
src/source/: dns.rs  http.rs  mod.rs  remote.rs  tls.rs
tests/: fetch-image-urls.py  image_urls_amd64.txt  image_urls_arm64.txt  run-boot-tests.sh
